Aggiornato il .gitignore
- Esclusi i file di progetto creati da CLion
- Aggiornati i path di esclusione per la cartella output

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-a.out
-a.edmisa
-sample.ild
+/ild_compiler/output/*
+!/ild_compiler/output/non_eliminare.txt
+/.idea/*
+/CMakeLists.txt
+/cmake-build-debug/*
